# zetaone

./: .gcloudignore  .gitattributes  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt  test_local.py  uvicorn_err.txt  uvicorn_out.txt
docker/: Dockerfile  preload_models.py
docs/: COFOUNDER_BRIEF.md
migrations/: add_review_workflow_and_media.sql  add_verdict_audit_fields.sql  create_webhooks_table.sql
ontology/: ONTOLOGY_MAP.md  README.md  categories.yaml  corpus_version.yaml  mappings.yaml  policy_timeline.yaml  policy_versions.yaml  schema.yaml  validate.py
ontology/benchmark/: README.md  coverage.py  retrieval_tests.yaml  run_retrieval_tests.py
ontology/corpus/: amazon_ads_us.yaml  google_ads_eu.yaml  google_ads_us.yaml  linkedin_ads_us.yaml  meta_ads_eu.yaml  meta_ads_us.yaml  (+10 more)
scripts/: clean_redeploy_cloud_run.sh  eval_hybrid_compare_nlp.py  eval_hybrid_local.py  profile_cloudrun.py  profile_engines.py
tests/: test_document_ingest.py  test_extractor_plan.py  test_gemini_client.py  test_hybrid_engine.py  test_llm_review_schema.py  test_ollama_client.py  test_ontology_pack_builder.py  test_ontology_policy_loader.py  test_persistence.py  test_pipeline_fast_path.py  test_pipeline_modes.py  test_pipeline_ontology_clauses.py  test_platform_metadata.py  test_policy_context.py  test_review_workflow.py  test_semantic_text_extractor.py  test_verdict_display.py  test_verdict_risk_score.py  test_vlm_packet.py  test_zetaone_pipeline.py  test_zetaone_pipeline_real_ocr.py
web/: README.md  index.html  policylens.html  reviewlens.html  sentrilens.html
(+259 files in other folders)
