[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zetaone"
version = "0.1.0"
description = "AI Compliance Platform — Deterministic, evidence-first architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "sqlalchemy>=1.4",
    "fastapi",
    "uvicorn",
    "pydantic",
    "alembic",
    "psycopg2-binary",
    "python-dotenv",
    "pyyaml",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
